efficient JS for radio button

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <div class="formElement">   
                 <label class="infoHead">Book Catagory</label>
 
-                <input type="radio" id="fiction" name="bookCatagory" value="fiction"></input>
+                <input type="radio" id="fiction" name="bookCatagory" value="Fiction"></input>
                 <label class="radioHead">Fiction</label>
-                <input type="radio" id="non-fiction" name="bookCatagory" value="non-fiction"></input>
+                <input type="radio" id="non-fiction" name="bookCatagory" value="Non-Fiction"></input>
                 <label class="radioHead">Non Fiction</label>
-                <input type="radio" id="tech" name="bookCatagory" value="tech"></input>
+                <input type="radio" id="tech" name="bookCatagory" value="Tech"></input>
                 <label class="radioHead">Tech</label>
             </div>
                 <button id="addBtn">Add Book</button>
