prototype based oop

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 <input type="radio" id="tech" name="bookCatagory" value="Tech"></input>
                 <label class="radioHead">Tech</label>
             </div>
-                <button id="addBtn">Add Book</button>
+                <div id="btnSuccess">
+                    <button id="addBtn">Add Book</button>
+                    <span id="addSuccess"></span>
+                </div>
         </div>
         <div>
             <h3>Your Books :</h3>
@@ -73,5 +76,6 @@
 </div>
 
 </body>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
+<script src="js/test.js"></script>
 </html>
