--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 </div>
 
 </body>
-<!-- <script src="js/main.js"></script> -->
-<script src="js/test.js"></script>
+<script src="js/main.js"></script>
+<!-- <script src="js/test.js"></script> -->
 </html>
